--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -7,9 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
   </head>
+  <style>
+    p {
+    color:white;
+    background-color: green;
+}
+  </style>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="color: black; background-color: goldenrod;">Inline Method</button>
   </body>
 </html>
