--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -12,12 +12,12 @@
     color:white;
     background-color: green;
     font-family: Arial;
-    font-size: medium;
+    font-size: 18px;
 }
   </style>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button style="color: black; background-color: goldenrod;">Inline Method</button>
+    <button style="background-color: goldenrod; font-size: 18px;">Inline Method</button>
   </body>
 </html>
